# PCB-Routing-Algorithm

./: .gitignore  LICENSE  README.md  app.py  bench.py  cli.py  kicad_io.py  pcb_grid.py  pyproject.toml  requirements.txt  router.py  visualize.py
.github/workflows/: ci.yml
examples/: blinker_unrouted.kicad_pcb  build_examples.py  two_layer_demo.kicad_pcb
rl/: env.py  evaluate.py  evaluate_heuristic.py  heuristic_data.py  heuristic_net.pt  heuristic_net.py  policy.pt  policy.py  policy_ppo.pt  policy_ppo_ripup.pt  train.py  train_heuristic.py  train_ppo.py  train_ppo_ripup.py
tests/: test_heuristic.py  test_kicad_io.py  test_rl.py  test_router.py
